[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Match/Match.tscn" type="PackedScene" id=1]
[ext_resource path="res://Networking/Lobby/crude_connection.gd" type="Script" id=2]

[node name="Crude" type="Node"]
script = ExtResource( 2 )

[node name="Match" parent="." groups=["network_sync"] instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 64

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -120.0
margin_right = 200.0
margin_bottom = 120.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer"]
show_behind_parent = true
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 230.0
color = Color( 0, 0.505882, 0.678431, 1 )

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 230.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dummy" type="Control" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_right = 52.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Online" type="Label" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_left = 62.0
margin_right = 362.0
margin_bottom = 14.0
text = "Online"
align = 1

[node name="Host2" type="Label" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_top = 29.0
margin_right = 52.0
margin_bottom = 43.0
text = "Host"
align = 2

[node name="HostField" type="LineEdit" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_left = 62.0
margin_top = 24.0
margin_right = 362.0
margin_bottom = 48.0
rect_min_size = Vector2( 300, 0 )
text = "localhost"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Label" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_top = 63.0
margin_right = 52.0
margin_bottom = 77.0
text = "Port"
align = 2

[node name="PortField" type="LineEdit" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_left = 62.0
margin_top = 58.0
margin_right = 362.0
margin_bottom = 82.0
text = "31415"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_top = 92.0
margin_right = 52.0
margin_bottom = 112.0
text = "Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_left = 62.0
margin_top = 92.0
margin_right = 362.0
margin_bottom = 112.0
text = "Client"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dummy5" type="Control" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_top = 122.0
margin_right = 52.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Online2" type="Label" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_left = 62.0
margin_top = 122.0
margin_right = 362.0
margin_bottom = 136.0
text = "Local"
align = 1

[node name="Dummy3" type="Control" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_top = 146.0
margin_right = 52.0
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Local" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_left = 62.0
margin_top = 146.0
margin_right = 362.0
margin_bottom = 166.0
text = "Local"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dummy4" type="Control" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_top = 176.0
margin_right = 52.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mash" type="Button" parent="CanvasLayer/MarginContainer/GridContainer"]
margin_left = 62.0
margin_top = 176.0
margin_right = 362.0
margin_bottom = 196.0
text = "Mash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SyncLost" type="Label" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 10, 10 )
text = "BRUH"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="CanvasLayer/MarginContainer/GridContainer/Server" to="." method="_on_Server_button_up"]
[connection signal="button_up" from="CanvasLayer/MarginContainer/GridContainer/Client" to="." method="_on_Client_button_up"]
[connection signal="button_up" from="CanvasLayer/MarginContainer/GridContainer/Local" to="." method="_on_Local_button_up"]
[connection signal="button_up" from="CanvasLayer/MarginContainer/GridContainer/Mash" to="." method="_on_Mash_button_up"]
